One more fix; pass repo name correctly

--- a/.github/workflows/autobranch.yml
+++ b/.github/workflows/autobranch.yml
@@ -9,10 +9,10 @@ on:
     # cron format is: minute hour day-of-month year day-of-week.  A ’*’
     # means all possible values, day-of-week starts with 0 for Sunday.
     # GitHub times are UTC. Thus the following is: Midnight every Friday
-    - cron: '0 0 * * 5'
+    - cron: '* * * * *'
 
 jobs:
-  scheduled_job:
+  scheduled_release_branch_maker_job:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -20,15 +20,15 @@ jobs:
         with:
           python-version: '3'
       - name: install dependencies
-        run: pip install PyGithub semver dateutil
+        run: pip install PyGithub semver
       - name: run our branch maker
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPO: ${{ github.event.repository.name }}
+          REPO_NAME: ${{ github.repository }}
         # The python script that does the work takes a single optional
         # argument which is the minimum number of days between releases.
         # Thus if we want to make a release every 3 weeks, we schedule
         # the time and day of the week above and specify 20 (days) here.
         # If no argument is given the script creates a release branch
         # unconditionally.
-        run: python make-release-branch.py 20
+        run: python make-release-branch.py 
